--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!doctype html>
-<html>
+<html ng-app="store">
 <head>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 </head>
 <body>
+  <div ng-controller="StoreController as store"><!-- store as alias -->
+    <div ng-repeat="product in store.products">
+      <div ng-hide="product.soldOut">
+        <h1>{{product.name}}</h1>
+        <h2>${{product.price}}</h2>
+        <p>{{product.description}}</p>
+        <button ng-show="product.canBuy">Add to cart</button>
+      </div>
+    </div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
