--- a/index.html
+++ b/index.html
@@ -5,16 +5,55 @@
 </head>
 <body>
   <div ng-controller="StoreController as store"><!-- store as alias -->
-    <div ng-repeat="product in store.products">
+    <ul class="list-group">
+      <li class="list-group-item" ng-repeat="product in store.products">
+        <h3>
+          {{product.name}}
+          <em class="pull-right">{{product.price | currency}}</em>
+          <img ng-src="{{product.images[0].full}}">
+        </h3>
+        <section ng-controller="PanelController as panel">
+          <ul class="nav nav-pills">
+            <li ng-class="{ active:panel.isSelected(1)}">
+              <a href ng-click="panel.selectTab(1)">Description</a>
+            </li>
+            <li ng-class="{ active:panel.isSelected(2)}">
+              <a href ng-click="panel.selectTab(2)">Specification</a>
+            </li>
+            <li ng-class="{ active:panel.isSelected(3)}">
+              <a href ng-click="panel.selectTab(3)">Review</a>
+            </li>
+          </ul>
+
+          <div class="panel" ng-show="panel.isSelected(1)">
+            <h4>Description</h4>
+            <p>{{product.description}}</p>
+          </div>
+          <div class="panel" ng-show="panel.isSelected(2)">
+            <h4>Specifications</h4>
+            <blockquote>Non yet</blockquote>
+          </div>
+          <div class="panel" ng-show="panel.isSelected(3)">
+            <h4>Reviews</h4>
+            <blockquote>None yet!</blockquote>
+          </div>
+        </section>
+      </li>
+    </ul>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+  <script src="js/app.js"></script>
+</body>
+</html>
+
+
+
+<!-- Version 1 -->
+<!--     <div ng-repeat="product in store.products">
       <div ng-hide="product.soldOut">
         <h1>{{product.name}}</h1>
         <h2>${{product.price}}</h2>
         <p>{{product.description}}</p>
         <button ng-show="product.canBuy">Add to cart</button>
       </div>
-    </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
-  <script src="js/app.js"></script>
-</body>
-</html>
+    </div> -->
