--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html ng-app="store">
 <head>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div ng-controller="StoreController as store"><!-- store as alias -->
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="product in store.products">
-        <h3>
-          {{product.name}}
-          <em class="pull-right">{{product.price | currency}}</em>
-          <img ng-src="{{product.images[0].full}}">
-        </h3>
+        <h3 product-title>></h3>
+
         <section ng-controller="PanelController as panel">
           <ul class="nav nav-pills">
             <li ng-class="{ active:panel.isSelected(1)}">
@@ -43,14 +41,14 @@
               <cite>by: {{review.author}}</cite>
             </blockquote>
 
-            <form class="form-horizontal" role="form" name="reviewForm">
+            <form class="form-horizontal" role="form" name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
               <blockquote>
-                <b>Stars: {{review.stars}}</b>
+                <b>Stars: {{reviewCtrl.review.stars}}</b>
                 {{review.body}}
-                <cite>by: {{review.author}}</cite>
+                <cite>by: {{reviewCtrl.review.author}}</cite>
               </blockquote>
 
-              <select ng-model="review.stars" class="form-control">
+              <select ng-model="reviewCtrl.review.stars" class="form-control" required>
                 <option value="1">1 star</option>
                 <option value="2">2 stars</option>
                 <option value="3">3 stars</option>
@@ -58,9 +56,9 @@
                 <option value="5">5 stars</option>
               </select>
 
-              <textarea class="form-control" ng-model="review.body" placeholder="Write review ..."/></textarea>
+              <textarea class="form-control" ng-model="reviewCtrl.review.body" placeholder="Write review ..." required></textarea>
               <label>by:</label>
-              <input class="form-control" ng-model="review.author" type="email" placeholder="Your Email"/>
+              <input name="author" class="form-control" ng-model="reviewCtrl.review.author" type="email" placeholder="Your Email" required/>
               <button type="submit" class="btn btn-default">Submit</button>
             </form>
 
