--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/product.js"></script>
 </body>
 </html>
 
